syntax = "proto3";

package orders.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service OrderRegister {
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {};
    rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse) {};
    rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse) {};
    rpc CancelOrder (CancelOrderRequest) returns (google.protobuf.Empty) {};
}

message OrderItem {
    int64 id = 1;
    int64 product_id = 2;
    string name = 3;
    string description = 4;
    int64 price = 5;
    int64 quantity = 6;
}

message OrderStatus {
    int64 id = 1;
    string name = 2;
}

message Order {
    int64 id = 1;
    uint64 user_id = 2;
    google.protobuf.Timestamp created = 3;
    google.protobuf.Timestamp updated = 4;
    OrderStatus status = 5;
    int64 price = 6;
    repeated OrderItem items = 7;
}

message GetOrderRequest {
    int64 id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message ListOrdersRequest {

}

message ListOrdersResponse {
    repeated Order orders = 1;
}

message UpdateOrderStatusRequest {
    int64 id = 1;
    int64 status_id = 2;
}

message UpdateOrderStatusResponse {
    Order order = 1;
}

message CancelOrderRequest {
    int64 id = 1;
}
